[package]
name = "dataAvailability_createApplicationKey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avail-rust = { git = "https://github.com/availproject/avail", tag = "v2.2.5.1" }
tokio = { version = "1.38.0", features = ["full"] }